--- a/style.css
+++ b/style.css
@@ -31,4 +31,34 @@
     .section {
         @apply text-3xl;
     }
+
+    /* todo, these should be tailwindified? barf */
+    /* todo the xy controller I took from https://github.com/madsstoumann */
+    .xy {
+        --bgc: #333;
+        --size: 15rem;	
+        --xybdc: rgba(136, 136, 136, .5);
+        --xybdw: 8px;
+        --xybgc: rgb(245, 230, 99);
+        --xysize: 4rem;
+        background-color:var(--bgc);
+        block-size: var(--size);
+        border: 0;
+        inline-size: var(--size);
+        overflow: hidden;
+        padding: 0;
+        touch-action: none;
+      }
+      .xy * {
+        background-color: var(--xybgc);
+        block-size: var(--xysize);
+        border: var(--xybdw) solid var(--xybdc);
+        border-radius: var(--xybdrs, 50%);
+        inline-size: var(--xysize);
+        touch-action: none;
+        user-select: none;
+      }
+      .xy *:active {
+        background-color: rgba(168, 218, 220, 1.00);
+      }
 }
